fix: make functions #[no_mangle]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ categories = ["science::robotics", "no-std", "embedded"]
 keywords = ["vex", "vex-v5", "vex-robotics", "robotics"]
 version = "0.1.0"
 edition = "2021"
+crate-type = ["staticlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
