--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vex_sdk"
+name = "vex-sdk"
 description = "Raw bindings to vexos user jump table functions."
 repository = "https://github.com/pros-rs/vex-sys/"
 authors = ["Tropical"]
