--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,10 @@ version = "0.15.0"
 edition = "2021"
 crate-type = ["staticlib"]
 
+[dependencies]
+rustc-std-workspace-core = { version = "1.0.0", optional = true }
+
+[features]
+rustc-dep-of-std = ["rustc-std-workspace-core"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
