--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ crate-type = ["staticlib"]
 
 [dependencies]
 core = { package = "rustc-std-workspace-core", version = "1.0.0", optional = true }
+compiler_builtins = { version = "^0.1.109", optional = true }
 
 [features]
-rustc-dep-of-std = ["core"]
+rustc-dep-of-std = ["core", "compiler_builtins"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
