refactor: use `target_env` for conditional compilation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,9 @@ core = { package = "rustc-std-workspace-core", version = "1.0.0", optional = tru
 compiler_builtins = { version = "^0.1.109", optional = true }
 
 [features]
-v5 = []
-exp = []
 rustc-dep-of-std = ["core", "compiler_builtins"]
 
 [package.metadata.docs.rs]
-default-target = "armv7a-none-eabi"
+default-target = "./armv7a-vex-v5.json"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
