--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-target = "./armv7a-vex-v5.json"
+target = "armv7a-vex-v5"
 
 [unstable]
 build-std = ["core", "compiler_builtins", "alloc"]
