--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,7 @@
-[package]
-name = "vex-sdk"
-description = "Raw bindings to vexos user jump table functions."
-repository = "https://github.com/vexide/vex-sdk/"
-authors = ["Tropical"]
-license = "MIT"
-categories = ["science::robotics", "no-std", "embedded"]
-keywords = ["vex", "vex-v5", "vex-robotics", "robotics"]
-version = "0.26.0"
-edition = "2021"
+[workspace]
+members = ["packages/*"]
+resolver = "3"
 
-[dependencies]
-core = { package = "rustc-std-workspace-core", version = "1.0.0", optional = true }
-compiler_builtins = { version = "^0.1.109", optional = true }
-
-[features]
-rustc-dep-of-std = ["core", "compiler_builtins"]
-
-[package.metadata.docs.rs]
-targets = ["armv7a-none-eabi"] # Not actually, but this is at least close.
+[workspace.dependencies]
+vex-sdk = { version = "0.26.0", path = "packages/vex-sdk" }
+vex-sdk-sys = { version = "0.0.1", path = "packages/vex-sdk-sys" }
