--- a/packages/vex-sdk-sys/Cargo.toml
+++ b/packages/vex-sdk-sys/Cargo.toml
@@ -8,6 +8,7 @@ categories = ["science::robotics", "no-std", "embedded"]
 keywords = ["vex", "vex-v5", "vex-robotics", "robotics"]
 version = "0.0.1"
 edition = "2021"
+links = "v5rt"
 
 [dependencies]
 core = { package = "rustc-std-workspace-core", version = "1.0.0", optional = true }
@@ -15,6 +16,13 @@ compiler_builtins = { version = "^0.1.109", optional = true }
 
 [features]
 rustc-dep-of-std = ["core", "compiler_builtins"]
+
+# Search for and use an installed version of the official VEX SDK
+system-sdk = []
+
+[build-dependencies]
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
 
 [package.metadata.docs.rs]
 targets = ["armv7a-vex-v5"]
