--- a/packages/vex-sdk/Cargo.toml
+++ b/packages/vex-sdk/Cargo.toml
@@ -9,6 +9,10 @@ keywords = ["vex", "vex-v5", "vex-robotics", "robotics"]
 version = "0.26.0"
 edition = "2021"
 
+# [lib]
+# name = "v5rt"
+# crate-type = ["staticlib"]
+
 [dependencies]
 vex-sdk-sys = { workspace = true }
 core = { package = "rustc-std-workspace-core", version = "1.0.0", optional = true }
