refactor: make sys depend on vex sdk directly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ resolver = "3"
 [workspace.dependencies]
 vex-sdk = { version = "0.26.0", path = "packages/vex-sdk" }
 vex-sdk-sys = { version = "0.0.1", path = "packages/vex-sdk-sys" }
+vex-sdk-types = { version = "0.0.1", path = "packages/vex-sdk-types" }
