--- a/packages/vex-sdk-sys/Cargo.toml
+++ b/packages/vex-sdk-sys/Cargo.toml
@@ -13,12 +13,15 @@ links = "v5rt"
 [dependencies]
 core = { package = "rustc-std-workspace-core", version = "1.0.0", optional = true }
 compiler_builtins = { version = "^0.1.109", optional = true }
+vex-sdk = { version = "0.26.0", path = "../vex-sdk", optional = true }
 
 [features]
 rustc-dep-of-std = ["core", "compiler_builtins"]
 
 # Search for and use an installed version of the official VEX SDK
 system-sdk = []
+# Compile and use vexide's open source reimplementation of the VEX SDK
+vexide-sdk = ["dep:vex-sdk"]
 
 [build-dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
