--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
-    "rust-analyzer.checkOnSave.allTargets": false,
-    "rust-analyzer.cargo.loadOutDirsFromCheck": true,
     "rust-analyzer.procMacro.enable": true,
-    "rust-analyzer.check.targets": [
-        "${workspaceFolder}/armv7a-vex-v5.json",
-    ],
+    "rust-analyzer.cargo.allTargets": false
 }
