--- a/packages/vex-sdk/Cargo.toml
+++ b/packages/vex-sdk/Cargo.toml
@@ -1,21 +1,19 @@
 [package]
 name = "vex-sdk"
-description = "Raw bindings to vexos user jump table functions."
+description = "FFI bindings to libraries compatible with the VEX runtime SDK."
 repository = "https://github.com/vexide/vex-sdk/"
 authors = ["Tropical"]
 license = "MIT"
 categories = ["science::robotics", "no-std", "embedded"]
 keywords = ["vex", "vex-v5", "vex-robotics", "robotics"]
-version = "0.26.0"
+version = "0.27.0"
 edition = "2021"
 
 [dependencies]
-vex-sdk-sys = { workspace = true }
 core = { package = "rustc-std-workspace-core", version = "1.0.0", optional = true }
-compiler_builtins = { version = "^0.1.109", optional = true }
 
 [features]
-rustc-dep-of-std = ["core", "compiler_builtins"]
+rustc-dep-of-std = ["core"]
 
 [package.metadata.docs.rs]
 targets = ["armv7a-vex-v5"]
