--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,5 @@
 [toolchain]
-channel = "nightly-2025-06-19"
+channel = "nightly-2025-08-20"
 components = ["rust-src"]
-targets = ["armv7a-vex-v5"]
+# We are using build-std
+# targets = ["armv7a-vex-v5"]
