--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ exclude = [
 resolver = "3"
 
 [workspace.dependencies]
-vex-sdk = { version = "0.27.0", path = "packages/vex-sdk" }
+vex-sdk = { version = "0.27.1-test.2", path = "packages/vex-sdk" }
 vex-sdk-jumptable = { version = "0.0.1", path = "packages/vex-sdk-jumptable" }
