feat: introduce vex-sdk-mock, throw compiler error if jumptable is used on the wrong target

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "rust-analyzer.cargo.allTargets": false,
+    "rust-analyzer.check.targets": [
+        "armv7a-vex-v5",
+    ],
     "rust-analyzer.linkedProjects": [
         "./Cargo.toml",
         "./packages/vex-sdk-build/Cargo.toml",
