--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
     "./packages/vex-sdk",
-    "./packages/vex-sdk-jumptable"
+    "./packages/vex-sdk-jumptable",
+    "./packages/vex-sdk-mock"
 ]
 exclude = [
     "./packages/vex-sdk-build",
@@ -9,5 +10,6 @@ exclude = [
 resolver = "3"
 
 [workspace.dependencies]
-vex-sdk = { version = "0.27.1-test.2", path = "packages/vex-sdk" }
-vex-sdk-jumptable = { version = "0.0.1", path = "packages/vex-sdk-jumptable" }
+vex-sdk = { version = "0.27.1", path = "packages/vex-sdk" }
+vex-sdk-jumptable = { version = "0.0.2", path = "packages/vex-sdk-jumptable" }
+vex-sdk-mock = { version = "0.0.1", path = "packages/vex-sdk-mock" }
