feat: add vex-sdk-pros

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
     "./packages/vex-sdk",
     "./packages/vex-sdk-jumptable",
-    "./packages/vex-sdk-mock"
+    "./packages/vex-sdk-mock",
+    "./packages/vex-sdk-pros",
 ]
 exclude = [
     "./packages/vex-sdk-build",
@@ -12,4 +13,5 @@ resolver = "3"
 [workspace.dependencies]
 vex-sdk = { version = "0.27.1", path = "packages/vex-sdk" }
 vex-sdk-jumptable = { version = "0.0.2", path = "packages/vex-sdk-jumptable" }
+vex-sdk-pros = { version = "0.0.1", path = "packages/vex-sdk-pros" }
 vex-sdk-mock = { version = "0.0.1", path = "packages/vex-sdk-mock" }
