--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,4 +2,5 @@
 target = "armv7a-vex-v5"
 
 [unstable]
-build-std = ["core"]
+build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
