refactor: rename vex-sdk-build to vex-sdk-download

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "./packages/vex-sdk-pros",
 ]
 exclude = [
-    "./packages/vex-sdk-build",
+    "./packages/vex-sdk-download",
 ]
 resolver = "3"
 
